Changed member sign convention

--- a/Class Modules/Member2D.cls
+++ b/Class Modules/Member2D.cls
@@ -765,7 +765,7 @@ Public Function Shear(x As Double) As Double
     If Round(x, 8) = 0 Then
         Shear = LocalForces.GetValue(2, 1)
     ElseIf Round(x, 8) = Round(Length, 8) Then
-        Shear = LocalForces.GetValue(5, 1)
+        Shear = -LocalForces.GetValue(5, 1)
     Else
         'Find the segment the location falls within
         i = 1
@@ -787,7 +787,7 @@ Public Function Moment(x As Double) As Double
     If Round(x, 8) = 0 Then
         Moment = LocalForces.GetValue(3, 1)
     ElseIf Round(x, 8) = Round(Length, 8) Then
-        Moment = LocalForces.GetValue(6, 1)
+        Moment = -LocalForces.GetValue(6, 1)
     Else
         'Find the segment that "x" falls on
         i = 1
