--- a/Class Modules/Member2D.cls
+++ b/Class Modules/Member2D.cls
@@ -512,7 +512,7 @@ Public Sub SegmentMember()
         'Add the beam end forces to the segment
         m_Segments(i).p1 = EndForces.GetValue(1, 1)                             'Axial force at the start of the member
         m_Segments(i).V1 = EndForces.GetValue(2, 1)                             'Shear at the start of the member
-        m_Segments(i).M1 = EndForces.GetValue(3, 1) - m_Segments(i).V1 * x      'Moment due to shear and moment at the start of the member
+        m_Segments(i).M1 = -EndForces.GetValue(3, 1) + m_Segments(i).V1 * x     'Moment due to shear and moment at the start of the member
         
         'Step through each load on the member
         For j = 1 To m_Loads.NumRows
@@ -553,7 +553,7 @@ Public Sub SegmentMember()
                 
                 If Direction = "Transverse" Then
                     'Sum the load effects (due to the distributed load) up to the start of the segment
-                    m_Segments(i).V1 = m_Segments(i).V1 + (x2 - x1) * (w1 + w2) / 2
+                    m_Segments(i).V1 = m_Segments(i).V1 - (x2 - x1) * (w1 + w2) / 2
                     m_Segments(i).M1 = m_Segments(i).M1 - (x1 - x2) * (2 * w1 * x1 + w1 * x2 + w2 * x1 - 3 * w1 * x + 2 * w2 * x2 - 3 * w2 * x) / 6
                 ElseIf Direction = "Axial" Then
                     m_Segments(i).p1 = m_Segments(i).p1 + (x2 - x1) * (w1 + w2) / 2
@@ -564,7 +564,7 @@ Public Sub SegmentMember()
                 
                 If Direction = "Transverse" Then
                     'Find the shear and moment (due to the point load) at the start of the segment
-                    m_Segments(i).V1 = m_Segments(i).V1 + P
+                    m_Segments(i).V1 = m_Segments(i).V1 - P
                     m_Segments(i).M1 = m_Segments(i).M1 - P * (x - x1)
                 ElseIf Direction = "Axial" Then
                     m_Segments(i).p1 = m_Segments(i).p1 + P
@@ -574,7 +574,7 @@ Public Sub SegmentMember()
             ElseIf M <> 0 And Round(x, 8) >= Round(x1, 8) Then
                 
                 'Find the moment (due to the applied moment) at the start of the segment
-                m_Segments(i).M1 = m_Segments(i).M1 + M
+                m_Segments(i).M1 = m_Segments(i).M1 - M
                 
             End If
             
@@ -665,7 +665,7 @@ Public Function Mmax() As Double
         End If
     Next i
     
-    Mmax = WorksheetFunction.Max(Max, LocalForces.GetValue(3, 1), -LocalForces.GetValue(6, 1))
+    Mmax = WorksheetFunction.Max(Max, -LocalForces.GetValue(3, 1), LocalForces.GetValue(6, 1))
     
 End Function
 
@@ -682,7 +682,7 @@ Public Function Mmin() As Double
         End If
     Next i
     
-    Mmin = WorksheetFunction.Min(Min, LocalForces.GetValue(3, 1), -LocalForces.GetValue(6, 1))
+    Mmin = WorksheetFunction.Min(Min, -LocalForces.GetValue(3, 1), LocalForces.GetValue(6, 1))
     
 End Function
 
@@ -785,9 +785,9 @@ Public Function Moment(x As Double) As Double
     Dim i As Integer
     
     If Round(x, 8) = 0 Then
-        Moment = LocalForces.GetValue(3, 1)
+        Moment = -LocalForces.GetValue(3, 1)
     ElseIf Round(x, 8) = Round(Length, 8) Then
-        Moment = -LocalForces.GetValue(6, 1)
+        Moment = LocalForces.GetValue(6, 1)
     Else
         'Find the segment that "x" falls on
         i = 1
